# loa-freeside

./: .dockerignore  .env.development.example  .gitattributes  .gitignore  .gitleaksignore  .loa-version.json  .loa.config.yaml  .loa.config.yaml.example  .sigil-version.json  AGENTREADME.md  BUTTERFREEZONE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.base  Dockerfile.dev  INSTALLATION.md  LICENSE.md  Makefile  PROCESS.md  README.md  SECURITY-AUDIT-REPORT.md  docker-compose.dev.yml  package-lock.json  package.json  pnpm-lock.yaml  testing-server-backup.yaml  testing-server-restored.yaml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  last-touched
.claude/: checksums.json  settings.json
.github/: CODEOWNERS  dependabot.yml
.run/: bridge-state.json  simstim-state.json  sprint-plan-state.json
app/: .env.example  package.json  pnpm-lock.yaml
apps/gateway/: .env.example  Cargo.toml  Dockerfile  METRICS.md  README.md
apps/gateway/config/: gateway.yaml
apps/gateway/src/: config.rs  error.rs  main.rs
apps/gateway/src/events/: mod.rs  serialize.rs
apps/gateway/src/health/: mod.rs
apps/gateway/src/metrics/: mod.rs
apps/gateway/src/nats/: mod.rs  publisher.rs
apps/gateway/src/shard/: mod.rs  pool.rs  state.rs
apps/gateway/tests/: wire_format.rs
config/: dynamic-contract.json
decisions/: 001-lua-for-budget-atomicity.md  002-es256-jwt-signing.md  003-two-counter-budget-model.md  004-adaptive-drift-thresholds.md
docs/: API-CHANGELOG.md  API-QUICKSTART.md  API-REFERENCE.md  CLI.md  ECONOMICS.md  (+17 more)
docs-site/: next.config.mjs  package.json
(+2473 files in other folders)
