[package]
name = "arrakis-gateway"
version = "0.2.0"
edition = "2021"
description = "Rust Discord Gateway for Arrakis using Twilight - Sprint S-4"
license = "AGPL-3.0"
authors = ["The Honey Jar <dev@thehoneyjar.xyz>"]
repository = "https://github.com/0xHoneyJar/arrakis"

[dependencies]
# Twilight ecosystem
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# NATS messaging (Sprint S-4)
async-nats = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Observability (Sprint S-4)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# HTTP server for health endpoints (Sprint S-4)
axum = "0.7"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Concurrent data structures (Sprint S-4)
dashmap = "5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
